Started working on fixing child elements overflowing their parent in the header, nav, and footer

--- a/style.css
+++ b/style.css
@@ -30,52 +30,33 @@ body {
 .header {
     background-color: #a6a9a8;
     width: 100%;
+    height: 10vh;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     border: 3px solid black;
+    /* gap: 2rem; */
     /* overflow: hidden; */
     /* flex-wrap: wrap ; */
 }
 
 .hdr_a {
-    /* background-color: #427d52; */
-    width: 30%;
-}
-
-.hdr_a img {
-    /* background-color: #427d52; */
-    height: 2rem;
+    flex:2; /* Je pourrai les remplacer si besoin par des width en % si besoin*/
     /* width: 30%; */
+    background-color: #350ba7;
 }
 
 .hdr_b {
-    /* background-color: #e4f16d; */
-    width: 70%;
-    /* height: 100%; */
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-wrap: wrap;  
-    
+    flex:4;/* Je pourrai les remplacer si besoin par des width en % si besoin*/
+    background-color: #46c346;
+    /* width: 70%; */
 }
 
- .hdr_b div {
-    /* background-color: #e76ac8; */
-    max-height: 100%;
-    /* max-width: 100%; */
- }
-.hdr_b a {
-    background-color: #8f86a8;
-    text-align: center;
-    padding: 0.75rem 1.5rem;
-    color: #fff;
-    
+.hdr_a img {
+    width: 10%;
+    height: 100%;
 }
 
-.connexion {
-    border-radius: 25px;
-    background-color: #3CB371 ;
-}
+
 
 .nav {
     background-color: #a6a9a8;
@@ -136,15 +117,17 @@ body {
 
 .footer {
     background-color: #454242;
-    width: 100%;
+    /* width: 100%; */
     /* height: 10vh; */
     display: flex;
     justify-content: space-around;
+    /* gap: 1em; */
 }
 
 .footer div {
-    height: 2rem;
+    /* height: 2rem; */
     background-color: #a2c74d;
-    width: 5rem;
-    margin: 1rem;
+    /* width: 5rem; */
+    /* margin: 1rem; */
+    /* flex: 1; */
  }
